--- a/my_first_web_page.html
+++ b/my_first_web_page.html
@@ -40,6 +40,9 @@
       <li>ESPN</li>
       <li>Family Guy</li>
       <li>Shark Tank</li>
+      <li>Amish Wars</li>
+      <li>Say Yes to the Dress</li>
+      <li>Cupcake Wars</li>
   </ul>
 <h3>My Favorite Chiraq Rappers</h3>
   <ul>
